Index done with target blank

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -14,8 +14,8 @@
   </div>
   <h3>Aldesal - Presentación Figma</h3>
   <div class="flex-container">
-    <a href="https://www.figma.com/design/42uvgrYMxEPF7cTaXcjQB8/Aldesal-Games?node-id=0-1&t=SnhWcUTdSrG8vBCn-1">Modo editor</a>
-    <a href="https://www.figma.com/proto/42uvgrYMxEPF7cTaXcjQB8/Aldesal-Games?node-id=266-2158&t=SnhWcUTdSrG8vBCn-1">Modo presentación</a>
+    <a target="_blank" href="https://www.figma.com/design/42uvgrYMxEPF7cTaXcjQB8/Aldesal-Games?node-id=0-1&t=SnhWcUTdSrG8vBCn-1">Modo editor</a>
+    <a target="_blank" href="https://www.figma.com/proto/42uvgrYMxEPF7cTaXcjQB8/Aldesal-Games?node-id=266-2158&t=SnhWcUTdSrG8vBCn-1">Modo presentación</a>
   </div>
 </body>
 </html>
