updated base game.html

--- a/TP2/EntregaFinal/pages/game.html
+++ b/TP2/EntregaFinal/pages/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <base href="/TP2/EntregaFinal/">
+  <base href="../">
   <link rel="stylesheet" href="./css/index.css">
   <script defer src="./js/header.js"></script>
   <meta charset="UTF-8">
