--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -256,7 +256,7 @@
             <article class="card">
               <div class="card-background"></div>
 
-              <a href="" class="stack">
+              <a href="game.html" class="stack">
 
 
                 <img src="img/juegos/star-clash.jpeg" alt="">
