--- a/TP2/EntregaFinal/home.html
+++ b/TP2/EntregaFinal/home.html
@@ -217,7 +217,7 @@
               </a>
             </li>
             <li>
-              <a href="login.html">
+              <a href="index.html">
 
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
                   <path
