--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -113,7 +113,7 @@
 
 
 
-        <a href="./">
+        <a href="./home.html">
           <svg class="logo" width="31" height="40" viewBox="0 0 31 40" fill="none">
             <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"
               d="M14.803 0.03344C14.4561 0.130522 13.9917 0.520676 13.642 1.00875C13.1505 1.69459 0.672701 20.755 0.537812 21.0258C-0.0857956 22.2782 -0.0833639 23.4492 0.545411 24.6995C0.688204 24.9834 10.3962 39.8251 10.4192 39.7946C10.4233 39.7891 11.4679 36.13 12.7406 31.6633C15.4848 22.0315 14.6617 22.03 17.4092 31.6718C18.6834 36.1435 19.7372 39.7896 19.751 39.7744C19.7732 39.7499 28.5816 26.3393 29.1995 25.3893C30.2442 23.7831 30.3496 22.2964 29.5217 20.8444C29.3673 20.5736 16.6781 1.24919 16.4594 0.951752C15.9218 0.220575 15.3221 -0.111899 14.803 0.03344ZM14.8882 10.4225C14.4157 13.0228 14.2805 13.4233 13.6414 14.1161C12.9731 14.8406 12.4398 15.0534 10.3094 15.4458C9.51776 15.5915 8.86239 15.7185 8.853 15.7279C8.83199 15.7489 8.93371 15.7692 10.4949 16.0555C13.6891 16.6413 14.1828 17.1641 14.8099 20.6247C14.9415 21.3509 15.0597 21.9451 15.0727 21.9451C15.0856 21.9451 15.2043 21.3509 15.3364 20.6247C15.9752 17.1141 16.4307 16.6481 19.8376 16.0198C20.6292 15.8738 21.2846 15.7466 21.294 15.7373C21.3151 15.7162 21.2102 15.6953 19.6521 15.41C17.7276 15.0576 17.1588 14.8238 16.5056 14.1163C15.8787 13.4374 15.7324 13.0225 15.3179 10.7455C15.0519 9.28408 15.0898 9.31261 14.8882 10.4225Z"
@@ -260,6 +260,15 @@
       </form>
     </div>
 
+    <div id="modal">
+      <p>
+        Te has registrado correctamente
+      </p>
+      <svg width="16" height="12" viewBox="0 0 16 12" fill="none">
+        <path fill="currentColor" d="M15.3894 0.754534C14.9609 0.325963 14.318 0.325963 13.8894 0.754534L5.85373 8.79025L2.5323 5.46882C2.10373 5.04025 1.46088 5.04025 1.03231 5.46882C0.603734 5.89739 0.603734 6.54025 1.03231 6.96882L5.10373 11.0402C5.31802 11.2545 5.53231 11.3617 5.85373 11.3617C6.17516 11.3617 6.38945 11.2545 6.60373 11.0402L15.3894 2.25453C15.818 1.82596 15.818 1.18311 15.3894 0.754534Z" fill="white"/>
+        </svg>
+    </div>
+
   </main>
 
   <footer class="full-width">
@@ -343,6 +352,51 @@
 
 
   </footer>
+
+  <script>
+    const params = new URLSearchParams(window.location.search)
+    const isRegistered = params.get('registered')
+
+    if (isRegistered == "true") {
+      const modal = document.querySelector('#modal')
+
+      modal.classList.add('appear')
+    }
+  </script>
+
+  <style>
+    #modal{
+      display: flex;
+      align-items: baseline;
+      gap: 6px;
+      position: fixed;
+      top: 0;
+      left: 50%;
+
+      translate: -50% 0;
+      transform: translateY(-100%);
+      
+      background-color: var(--clr-green);
+      color: var(--clr-white);
+      padding: 20px;
+      border-radius: 0 0 20px 20px;
+      z-index: 99;
+      transition: transform .5s;
+      
+      &.appear{
+        translate: -50% 0;
+        transform: translateY(0);
+        animation: hideTop .3s ease-in forwards;
+        animation-delay: 5s;
+      }
+    }
+
+    @keyframes hideTop {
+      to{
+        transform: translateY(-100%);
+      }
+    }
+  </style>
 
 </body>
 
