--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -8,8 +8,8 @@
   <script defer src="js/Circulo.js"></script>
   <script defer src="js/Casillero.js"></script>
   <script defer src="js/Ficha.js"></script>
-  <!-- <script defer src="js/Tablero.js"></script> -->
-  <script defer src="js/main.js" type="module"></script>
+  <script defer src="js/Tablero.js"></script>
+  <script defer src="js/main.js"></script>
   <title>Juego</title>
 </head>
 <body>
