--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -10,26 +10,11 @@
   <script defer src="js/Ficha.js"></script>
   <script defer src="js/Tablero.js"></script>
   <script defer src="js/main.js"></script>
+
+  <link rel="stylesheet" href="css/index.css">
   <title>Juego</title>
 </head>
 <body>
   <canvas id="c" width="1300" height="500"></canvas>
-
-  <style>
-
-    *{
-      box-sizing: border-box;
-      padding: 0;
-      margin: 0;
-    }
-
-    body{
-      background-color: #001;
-      min-height: 100vh;
-      min-height: 100dvh;
-      display: grid;
-      place-items: center;
-    }
-  </style>
 </body>
 </html>
