add Juego class

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -9,6 +9,7 @@
   <script defer src="js/Casillero.js"></script>
   <script defer src="js/Ficha.js"></script>
   <script defer src="js/Tablero.js"></script>
+  <script defer src="js/Juego.js"></script>
   <script defer src="js/main.js"></script>
 
   <link rel="stylesheet" href="css/index.css">
