--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -6,6 +6,7 @@
   <script defer src="js/Escena.js"></script>
   <script defer src="js/Dibujable.js"></script>
   <script defer src="js/ResizedImage.js"></script>
+  <script defer src="js/utils.js"></script>
   <script defer src="js/UIElement.js"></script>
   <script defer src="js/Circulo.js"></script>
   <script defer src="js/Casillero.js"></script>
